// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should render isMulti - false 1`] = `
<Input
  selectProps={
    Object {
      "isMulti": false,
    }
  }
/>
`;

exports[`Input component should render isMulti - true 1`] = `
<Input
  selectProps={
    Object {
      "isMulti": true,
    }
  }
/>
`;
